# moviellens-ai-playground

./: Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml
movielens_ai_playground/examples/: qdrant_search_example.py
movielens_ai_playground/io/: read_data.py
movielens_ai_playground/semantic_search/: benchmark.py  bm25_preprocessing.py  bm25_retrieval.py  build_bm25_index.py  feed_query_embeddings.py  generate_semantic_embeddings.py  qdrant_feed.py  qdrant_search.py  vespa_similar.py
movielens_ai_playground/utils/: UI_utils.py  get_movies_url.py
notebooks/: BM25-POC.ipynb  How-to-evaluate-BM25.ipynb
pages/: search.py
utils/: UI_utils.py  get_movies_url.py
