[tool.poetry]
name = "movielens-ai-playground"
version = "0.1.0"
description = "Experimenting recommendations systems with movilens dataset"
authors = ["Tiago Cabo <ttiago.ccabo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "movielens_ai_playground"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.26.0"
rank-bm25 = "*"
tqdm = "*"
sentence-transformers = "*"
qdrant-client = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
